--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -68,6 +68,7 @@
 // ------utilities-----
 @import "utilities/tools";
 @import "utilities/utilities";
+@import "utilities/helper";
 
 // ------layout--------
 @import "layout/sidebar";
