--- a/app/assets/components/topNavbar.ejs
+++ b/app/assets/components/topNavbar.ejs
@@ -1,3 +1,6 @@
+<!-- class 裡面 -->
+<!-- <%= current !=='checkout' ? 'd-block' : 'd-none' -%> -->
+
 <div class="topNavBar border-bottom border-gray-600">
   <div class="container">
     <header class="my-6 position-relative">
