--- a/app/assets/style/base/_base.scss
+++ b/app/assets/style/base/_base.scss
@@ -23,10 +23,12 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 img {
+  display: block;
   max-width: 100%;
   // width: 100%;
   height: auto;
-  display: block;
+  vertical-align: middle;
+  object-fit: cover;
 }
 
 a {
