--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-hantTW">
+<html lang="zh-hant-TW">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +23,8 @@
 
 <body>
   <%- include('./assets/components/topNavbar.ejs')%>
-  
-  <%- contents %>
 
+  <%- contents %>
   <!-- swiper js -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <!-- vender js -->
