--- a/app/meta.ejs
+++ b/app/meta.ejs
@@ -1,19 +1,21 @@
-
-<!-- 作者 -->
-<meta name="author" content="" />
-<!-- 網頁說明 -->
-<meta name="description" content="" />
-<!-- 公司名稱 -->
-<meta name="company" content="" />
-<!-- 版權宣告 -->
-<meta name="copyright" content="" />
-<!-- 網站發佈地址 -->
-<meta name="Distribution" content="" />
-<!-- FB 分享的標題  -->
-<meta property="og:title" content="" />
-<!-- FB 分享的內容敘述 -->
-<meta property="og:description" content="" />
-<!-- FB 分享的網頁連結 -->
-<meta property="og:url" content="" />
-<!-- FB 分享的縮圖 -->
-<meta property="og:image" content="" />
+<!-- Search Engine -->
+<meta name="description" content="頁面說明">
+<meta name="image" content="網站圖片">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="台北當代藝術展">
+<meta itemprop="description" content="頁面說明">
+<meta itemprop="image" content="網站圖片">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="台北當代藝術展">
+<meta name="twitter:description" content="頁面說明">
+<meta name="twitter:image:src" content="預覽圖片">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="台北當代藝術展">
+<meta name="og:description" content="頁面說明">
+<meta name="og:image" content="預覽圖片">
+<meta name="og:url" content="網址">
+<meta name="og:site_name" content="台北當代藝術展">
+<meta name="fb:admins" content="FB-ID">
+<meta name="og:type" content="website">
+<link rel="shortcut icon" href="" type="image/x-icon">
