更新 header nav main scroll

--- a/app/assets/style/config/_variables.scss
+++ b/app/assets/style/config/_variables.scss
@@ -449,7 +449,8 @@ $aspect-ratios: ("1x1": 100%,
 
 // scss-docs-start font-variables
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !default;$font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace !default;
+$font-family-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !default;
+$font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace !default;
 // stylelint-enable value-keyword-case
 $font-family-base: var(--#{$variable-prefix}font-sans-serif) !default;
 $font-family-code: var(--#{$variable-prefix}font-monospace) !default;
@@ -494,8 +495,9 @@ $font-sizes: (
   6: $h1-font-size, // 40
   lg: 3rem,         // 48
   xl: 4rem,         // 64
-  xxl: 4.5rem,       // 72
-  "22o": 1.375rem
+  xxl: 4.5rem,      // 72
+  "22o": 1.375rem,  // 22
+  "30o": 1.875rem,  // 30
   ) !default;
   // scss-docs-end font-sizes
 
