--- a/app/assets/components/layout/meta.ejs
+++ b/app/assets/components/layout/meta.ejs
@@ -18,4 +18,4 @@
 <meta name="og:site_name" content="台北當代藝術展">
 <meta name="fb:admins" content="FB-ID">
 <meta name="og:type" content="website">
-<link rel="shortcut icon" href="" type="image/x-icon">
+<link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon"> 
