--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -14,12 +14,12 @@
 // r-插入想要改動「變數」區域
 
 // r-這個檔案「更改」既有變數
-@import "./helpers/variables";
+@import "./config/variables";
 @import "../../../node_modules/bootstrap/scss/mixins"; 
 @import "../../../node_modules/bootstrap/scss/utilities";
 
 // r-這個檔案「更改」既有工具變數
-@import "./helpers/utilities";
+@import "./config/utilities";
 
 // Optional
 // Layout & components
@@ -64,20 +64,27 @@
 // ------helpers--------
 @import "base/base";
 @import "helpers/mixin";
+@import "helpers/hidden";
 
 // ------utilities-----
 @import "utilities/tools";
 @import "utilities/utilities";
 @import "utilities/helper";
 
+// ------components------
+@import "components/herobanner";
+@import "components/navscroll";
+@import "components/modal";
+
 // ------layout--------
+@import "layout/layout";
+@import "layout/header";
+@import "layout/footer";
 @import "layout/sidebar";
 
 // ------pages---------
 @import "pages/index";
 // 自定義區域 end
-
-
 
 
 
