--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -74,6 +74,8 @@
 // ------components------
 @import "components/herobanner";
 @import "components/navscroll";
+@import "components/subscribe";
+@import "components/swiper";
 @import "components/modal";
 
 // ------layout--------
@@ -84,6 +86,7 @@
 
 // ------pages---------
 @import "pages/index";
+@import "pages/design";
 // 自定義區域 end
 
 
