--- a/app/assets/style/config/_variables.scss
+++ b/app/assets/style/config/_variables.scss
@@ -93,7 +93,9 @@ $theme-colors: (
   "dark": $dark,
   "white": $white,
   "black": $black,
-  "black-200": $black-200
+  "black-200": $black-200,
+  "gray-100": $gray-100,
+  "gray-600": $gray-600
 ) !default;
 // scss-docs-end theme-colors-map
 
