--- a/app/assets/components/modules/nav_scroll.ejs
+++ b/app/assets/components/modules/nav_scroll.ejs
@@ -1,31 +1,31 @@
 <div class="nav-scroller border-bottom border-gray-600 sticky-md-top">
   <ul class="scrollmenu nav">
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">音樂</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">音樂</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">戲劇</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">戲劇</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">設計</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="./design.html">設計</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">藝術</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">藝術</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">美食</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">美食</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">旅遊</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">旅遊</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">電影</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">電影</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">親子</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">親子</a>
     </li>
     <li class="nav-item me-mdx1">
-      <a class="nav-link scrollmenu_link py-14o px-18o" href="./product.html">期間限定</a>
+      <a class="nav-link scrollmenu_link py-14o px-18o" href="#">期間限定</a>
     </li>
   </ul>
 </div>
