--- a/app/assets/style/components/_subscribe.scss
+++ b/app/assets/style/components/_subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe_bg {
-  background-image: url('../../../assets/images/wladislaw-peljuchno-Y_f1aHpR1tc-unsplash.jpg');
+  background-image: url('/assets/images/wladislaw-peljuchno-Y_f1aHpR1tc-unsplash.jpg');
   height: 400px;
 }
 
