--- a/app/assets/style/components/_herobanner.scss
+++ b/app/assets/style/components/_herobanner.scss
@@ -1,4 +1,4 @@
 .banner {
-  background-image: url("/assets/images/herobanner.jpg");
+  background-image: url("../../assets/images/herobanner.jpg");
   height: 480px;
 }
