--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -27,7 +27,7 @@
   padding: 60px 0 40px 0;
 
   &_bgpic {
-    background: url('/assets/images/people2.png');
+    background: url('../../assets/images/people2.png');
     height: 482px;
     background-size: cover;
   }
