--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -33,7 +33,7 @@
   }
 
   &_bg2 {
-    background-color: rgba($color: $primary, $alpha: .8);
+    background-color: rgba($color: $subBg, $alpha: .8);
     height: 482px;
   }
 
