--- a/app/assets/style/config/_variables.scss
+++ b/app/assets/style/config/_variables.scss
@@ -79,6 +79,7 @@ $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
 $dark: $gray-900 !default;
+$subBg: #190014CC !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
