--- a/app/assets/components/modules/footer.ejs
+++ b/app/assets/components/modules/footer.ejs
@@ -4,7 +4,7 @@
     <div class="footer_content">
       <div class="footer_word d-flex flex-column flex-md-row ">
         <h3 class="footer_title fs-4 my-md-7 mb-0 mt-4 me-md-3 fw-normal">EXHIBINECTION</h3>
-        <p class="footer_date my-md-7 fw-normal">© 2020. All Rights Reserved.</p>
+        <p class="footer_date my-md-7 fw-normal mb-4">© 2020. All Rights Reserved.</p>
       </div>
       <div class="footer_button d-none d-md-flex">
         <a href="#" class="footer_item text-gray-600 my-7">Sign in</a>
