--- a/app/assets/style/config/_utilities.scss
+++ b/app/assets/style/config/_utilities.scss
@@ -501,6 +501,7 @@ $utilities: map-merge(
     "color": (
       property: color,
       class: text,
+      responsive: true,
       values: map-merge(
         $theme-colors,
         (
