--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -6,7 +6,7 @@
 // @import "./helpers/utilities";
 // // utilites/api 一定要在最後引入，會用到 mixins 跟 variables 定義的內容 (bootstrap / api 裡面)
 // @import "../../../node_modules/bootstrap/scss/bootstrap";
-// // ＝＝＝＝＝＝＝＝＝＝不細項拆出來的放置方式 end＝＝＝＝＝＝＝＝＝
+// // ＝＝＝＝＝＝＝＝＝＝不細項拆出來的放置方式 End＝＝＝＝＝＝＝＝＝
 
 
 // scss-docs-start import-stack
