--- a/app/assets/components/modules/footer.ejs
+++ b/app/assets/components/modules/footer.ejs
@@ -1,8 +1,8 @@
 <!--footer-->
 <footer>
   <div class="container">
-    <div class="footer_content">
-      <div class="footer_word d-flex flex-column flex-md-row ">
+    <div class="d-flex justify-content-between align-items-center">
+      <div class="d-flex align-items-md-center flex-column flex-md-row ">
         <h3 class="footer_title fs-4 my-md-7 mb-0 mt-4 me-md-3 fw-normal">EXHIBINECTION</h3>
         <p class="footer_date my-md-7 fw-normal mb-4">© 2020. All Rights Reserved.</p>
       </div>
