--- a/app/assets/components/modules/topNavbar.ejs
+++ b/app/assets/components/modules/topNavbar.ejs
@@ -17,9 +17,7 @@
         <li class="nav-item ms-7">
           <a class="nav-link p-0 position-relative" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
              aria-controls="offcanvasRight">
-            <span class="material-icons text-black">
-              confirmation_number
-            </span>
+            <span class="material-icons text-black">confirmation_number</span>
             <span class="shopping__num">1</span>
           </a>
         </li>
