--- a/app/assets/style/components/_subscribe.scss
+++ b/app/assets/style/components/_subscribe.scss
@@ -9,11 +9,11 @@
 
 .subscribe_btn {
   background: $secondary;
+
   &:hover {
     background: $primary;
   }
 }
-
- .back {
-   padding: 24px 0 0 0;
- }
+// .back {
+//   padding: 24px 0 0 0;
+// }
