--- a/app/assets/components/modules/heroBanner.ejs
+++ b/app/assets/components/modules/heroBanner.ejs
@@ -1,9 +1,9 @@
 <section class="banner bg-cover  <%= current !== 'index' ? 'd-none' : 'true' -%> ">
   <div class="container h-100 text-white d-flex align-items-end align-items-md-center px-xxl pb-md-10">
-    <div class="row flex-grow-1 mb-10 mb-md-0">
+    <div class="row flex-grow-1 mb-20 mb-md-0">
       <div class="col-md-11 ms-auto">
-        <h2 class="fs-md-5 mb-md-2">台北當代藝術展</h2>
-        <p class="fs-md-2 mb-md-4 fw-bold">01 JUN - 31 OCT</p>
+        <h2 class="fs-5 mb-2 mb-md-2">台北當代藝術展</h2>
+        <p class="fs-2 mb-4 mb-md-4 fw-bold">01 JUN - 31 OCT</p>
         <div class="d-flex">
           <a href="#" class="btn btn-secondary px-8 px-md-12 py-10o me-2 flex-shrink-1">購買票券</a>
           <a href="#" class="btn btn-outline-white px-8 px-md-12 py-10o flex-shrink-1">詳細資訊</a>
