--- a/app/assets/style/config/_variables.scss
+++ b/app/assets/style/config/_variables.scss
@@ -258,46 +258,46 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 // scss-docs-start spacer-variables-maps
 $spacer: 1rem !default;
 $custom-grid-gutter-width: $spacer * 1.875; // $spacer * 1.5;
-// $r-spacers: (
-//   0: 0,
-//   1: $spacer * .25,
-//   2: $spacer * .5,
-//   3: $spacer,
-//   4: $spacer * 1.5,
-//   5: $spacer * 3
-// ) !default;
-
 $spacers: (
   0: 0,
-  1: $spacer * 0.25,    // 4
-  2: $spacer * 0.5,     // 8
-  3: $spacer * 0.75,    // 12
-  4: $spacer * 1,       // 16
-  5: $spacer * 1.25,    // 20
-  6: $spacer * 1.5,     // 24
-  7: $spacer * 1.75,    // 28
-  8: $spacer * 2,       // 32
-  9: $spacer * 2.25,    // 36
-  10: $spacer * 2.5,    // 40
-  11: $spacer * 2.75,   // 44
-  12: $spacer * 3,      // 48
-  13: $spacer * 3.25,   // 52
-  14: $spacer * 3.5,    // 56
-  15: $spacer * 3.75,   // 60
-  18: $spacer * 4.5,    // 72
-  20: $spacer * 5,      // 80 
-  24: $spacer * 6,      // 96
-  26: $spacer * 6.5,    // 104
-  40: $spacer * 10,     // 160
-  '6o':  $spacer * .375,    // 6px
-  '10o': $spacer * .625,    // 10px
-  '14o': $spacer * .875,    // 14px
-  '15o': $spacer * .09375,  // 15px
-  '18o': $spacer * 1.125,   // 18px
-  '30o': $spacer * 1.875,   // 30px
-  'gutter-15': $custom-grid-gutter-width / 2, // 15px
-  'gutter-30': $custom-grid-gutter-width, // 30px
+  1: $spacer * .25,
+  2: $spacer * .5,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 3
 ) !default;
+
+// $spacers: (
+//   0: 0,
+//   1: $spacer * 0.25,    // 4
+//   2: $spacer * 0.5,     // 8
+//   3: $spacer * 0.75,    // 12
+//   4: $spacer * 1,       // 16
+//   5: $spacer * 1.25,    // 20
+//   6: $spacer * 1.5,     // 24
+//   7: $spacer * 1.75,    // 28
+//   8: $spacer * 2,       // 32
+//   9: $spacer * 2.25,    // 36
+//   10: $spacer * 2.5,    // 40
+//   11: $spacer * 2.75,   // 44
+//   12: $spacer * 3,      // 48
+//   13: $spacer * 3.25,   // 52
+//   14: $spacer * 3.5,    // 56
+//   15: $spacer * 3.75,   // 60
+//   18: $spacer * 4.5,    // 72
+//   20: $spacer * 5,      // 80 
+//   24: $spacer * 6,      // 96
+//   26: $spacer * 6.5,    // 104
+//   40: $spacer * 10,     // 160
+//   '6o':  $spacer * .375,    // 6px
+//   '10o': $spacer * .625,    // 10px
+//   '14o': $spacer * .875,    // 14px
+//   '15o': 15px,  // 15px
+//   '18o': $spacer * 1.125,   // 18px
+//   '30o': $spacer * 1.875,   // 30px
+//   'gutter-15': $custom-grid-gutter-width / 2, // 15px
+//   'gutter-30': $custom-grid-gutter-width, // 30px
+// ) !default;
 
 $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) !default;
 // scss-docs-end spacer-variables-maps
