--- a/app/assets/style/base/_base.scss
+++ b/app/assets/style/base/_base.scss
@@ -10,7 +10,7 @@ body {
 
 body {
   line-height: 1.5;
-  font-family:'Roboto Mono', 'Roboto', 'Noto Sans TC', $font-family-sans-serif;
+  font-family: 'Roboto', 'Noto Sans TC', $font-family-sans-serif;
 }
 
 small {
