--- a/app/assets/style/config/_utilities.scss
+++ b/app/assets/style/config/_utilities.scss
@@ -97,6 +97,7 @@ $utilities: map-merge(
     "border-end": (
       property: border-right,
       class: border-end,
+      responsive: true,
       values: (
         null: $border-width solid $border-color,
         0: 0,
