--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -77,6 +77,7 @@
 @import "components/navscroll";
 @import "components/subscribe";
 @import "components/swiper";
+@import "components/cartShop";
 @import "components/modal";
 
 // ------layout--------
