--- a/app/assets/components/layout/layout.ejs
+++ b/app/assets/components/layout/layout.ejs
@@ -32,6 +32,7 @@
   <%- include('../modules/swiper.ejs')%>
   <%- include('../modules/subscribe.ejs')%>
   <%- include('../modules/footer.ejs')%>
+  <%- include('../modules/shopCart.ejs')%>
   <!--swiper-->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <!-- vender js -->
