--- a/app/assets/components/modules/topNavbar.ejs
+++ b/app/assets/components/modules/topNavbar.ejs
@@ -15,8 +15,7 @@
           <a class="nav-link p-0" href="#" data-bs-toggle="modal" data-bs-target="#registerModal">Sign up</a>
         </li>
         <li class="nav-item ms-7">
-          <a class="nav-link p-0 position-relative" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-             aria-controls="offcanvasRight">
+          <a class="nav-link p-0 position-relative" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
             <span class="material-icons text-black">confirmation_number</span>
             <span class="shopping__num">1</span>
           </a>
