--- a/app/assets/components/modules/heroBanner.ejs
+++ b/app/assets/components/modules/heroBanner.ejs
@@ -1,3 +1,4 @@
+<!-- <% if(current==='checkout' || current==='orderFinished' ){ %> hidden <%} %> -->
 <section class="banner bg-cover  <%= current !== 'index' ? 'd-none' : 'true' -%> ">
   <div class="container h-100 text-white d-flex align-items-end align-items-md-center px-xxl pb-md-10">
     <div class="row flex-grow-1 mb-20 mb-md-0">
@@ -12,3 +13,5 @@
     </div>
   </div>
 </section>
+
+ 
