--- a/app/assets/components/modules/nav_scroll.ejs
+++ b/app/assets/components/modules/nav_scroll.ejs
@@ -1,4 +1,4 @@
-<div class="nav-scroller border-bottom border-gray-600 sticky-md-top">
+<div class="nav-scroller border-bottom border-gray-600 sticky-md-top  <%= current === 'checkout' ? 'd-none' : 'true' -%>">
   <ul class="scrollmenu nav">
     <li class="nav-item me-mdx1">
       <a class="nav-link scrollmenu_link py-14o px-18o" href="#">音樂</a>
