--- a/app/assets/components/modules/subscribe.ejs
+++ b/app/assets/components/modules/subscribe.ejs
@@ -1,5 +1,5 @@
 <!--subscribe 下方banner-->
-<section class="subscribe_bg bg-cover d-flex align-items-end">
+<section class="subscribe_bg bg-cover d-flex align-items-end  <%= current === 'checkout' ? 'd-none' : 'true' -%>">
   <div class="container">
     <div class="row mb-3">
       <h2 class="text-white fs-5 fw-bolder mb-3">想收到最新消息嗎？<br> 快訂閱我們！</h2>
