--- a/app/assets/components/modules/swiper.ejs
+++ b/app/assets/components/modules/swiper.ejs
@@ -1,6 +1,6 @@
 <!--section like 輪播-->
 <!--swiper-->
-<div class="container mb-12 overflow-hidden">
+<div class="container mb-12 overflow-hidden  <%= current === 'checkout' ? 'd-none' : 'true' -%>">
   <h2 class="fs-5 fw-bolder mt-4 mt-md-12 mb-4 mb-md-6">猜你也喜歡...</h2>
   <div class="row">
     <div class="col-12 col-md-11 offset-md-1">
