--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -79,6 +79,7 @@
 @import "components/swiper";
 @import "components/cartShop";
 @import "components/modal";
+@import "components/timeLine";
 
 // ------layout--------
 @import "layout/layout";
@@ -90,6 +91,7 @@
 @import "pages/index";
 @import "pages/design";
 @import "pages/detail";
+@import "pages/checkout";
 // 自定義區域 end
 
 
