--- a/app/assets/components/modules/shopCart.ejs
+++ b/app/assets/components/modules/shopCart.ejs
@@ -11,23 +11,23 @@
         <div class="close position-absolute js-delete">
           <span class="material-icons cursor-pointer">close</span>
         </div>
-        <div class="row g-0 pt-7 pb-6 px-8">
-          <div class="col me-0 cart-img">
+        <div class="row g-0 pt-8 pt-lg-7 pb-4 pb-lg-6 px-4 px-lg-8">
+          <div class="me-0 cart-img">
             <img class="h-100 me-0" src="./assets/images/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" alt="...">
           </div>
-          <div class="col-5">
+          <div class="col col-lg-5">
             <div class="card-body ps-4 py-0 d-flex flex-column h-100">
               <h3 class="card-title fw-bold fs-1 mb-1">2020 台味設計展</h3>
-              <p class="card-text fw-bold fs-1 mb-1">01 JUN — 31 OCT</p>
+              <p class="card-text fw-bold fs-1 mb-1">01 JUN—31 OCT</p>
               <p class="card-text fs-1 fw-light">全票</p>
               <p class="cart-price fs-2 fw-bold mt-auto">NT$350</p>
             </div>
           </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center align-items-center h-100">
-              <a href="#" class="material-icons me-3 text-dark">remove</a>
+          <div class="col col-lg-3 flex-grow-0">
+            <div class="d-flex flex-column flex-md-row justify-content-center align-items-center h-100">
+              <a href="#" class="material-icons me-0 me-lg-3 text-dark">remove</a>
               <p class="fs-2 fw-bold">01</p>
-              <a href="#" class="material-icons ms-3 text-dark">add</a>
+              <a href="#" class="material-icons ms-0 ms-lg-3 text-dark">add</a>
             </div>
           </div>
         </div>
@@ -36,23 +36,23 @@
         <div class="close position-absolute js-delete">
           <span class="material-icons cursor-pointer">close</span>
         </div>
-        <div class="row g-0 pt-7 pb-6 px-8">
-          <div class="col me-0 cart-img">
+        <div class="row g-0 pt-8 pt-lg-7 pb-4 pb-lg-6 px-4 px-lg-8">
+          <div class="me-0 cart-img">
             <img class="h-100 me-0" src="./assets/images/michel-catalisano--a0D9LpcKV8-unsplash.jpg" alt="...">
           </div>
-          <div class="col-5">
+          <div class="col col-lg-5">
             <div class="card-body ps-4 py-0 d-flex flex-column h-100">
               <h3 class="card-title fw-bold fs-1 mb-1">2020 台味設計展</h3>
-              <p class="card-text fw-bold fs-1 mb-1">01 JUN — 31 OCT</p>
+              <p class="card-text fw-bold fs-1 mb-1">01 JUN—31 OCT</p>
               <p class="card-text fs-1 fw-light">全票</p>
               <p class="cart-price fs-2 fw-bold mt-auto">NT$350</p>
             </div>
           </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center align-items-center h-100">
-              <a href="#" class="material-icons me-3 text-dark">remove</a>
+          <div class="col col-lg-3 flex-grow-0">
+            <div class="d-flex flex-column flex-md-row justify-content-center align-items-center h-100">
+              <a href="#" class="material-icons me-0 me-lg-3 text-dark">remove</a>
               <p class="fs-2 fw-bold">01</p>
-              <a href="#" class="material-icons ms-3 text-dark">add</a>
+              <a href="#" class="material-icons ms-0 ms-lg-3 text-dark">add</a>
             </div>
           </div>
         </div>
@@ -61,23 +61,48 @@
         <div class="close position-absolute js-delete">
           <span class="material-icons cursor-pointer">close</span>
         </div>
-        <div class="row g-0 pt-7 pb-6 px-8">
-          <div class="col me-0 cart-img">
+        <div class="row g-0 pt-8 pt-lg-7 pb-4 pb-lg-6 px-4 px-lg-8">
+          <div class="me-0 cart-img">
             <img class="h-100 me-0" src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="...">
           </div>
-          <div class="col-5">
+          <div class="col col-lg-5">
             <div class="card-body ps-4 py-0 d-flex flex-column h-100">
               <h3 class="card-title fw-bold fs-1 mb-1">2020 台味設計展</h3>
-              <p class="card-text fw-bold fs-1 mb-1">01 JUN — 31 OCT</p>
+              <p class="card-text fw-bold fs-1 mb-1">01 JUN—31 OCT</p>
               <p class="card-text fs-1 fw-light">全票</p>
               <p class="cart-price fs-2 fw-bold mt-auto">NT$350</p>
             </div>
           </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center align-items-center h-100">
-              <a href="#" class="material-icons me-3 text-dark">remove</a>
+          <div class="col col-lg-3 flex-grow-0">
+            <div class="d-flex flex-column flex-md-row justify-content-center align-items-center h-100">
+              <a href="#" class="material-icons me-0 me-lg-3 text-dark">remove</a>
               <p class="fs-2 fw-bold">01</p>
-              <a href="#" class="material-icons ms-3 text-dark">add</a>
+              <a href="#" class="material-icons ms-0 ms-lg-3 text-dark">add</a>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="card mb-3 position-relative">
+        <div class="close position-absolute js-delete">
+          <span class="material-icons cursor-pointer">close</span>
+        </div>
+        <div class="row g-0 pt-8 pt-lg-7 pb-4 pb-lg-6 px-4 px-lg-8">
+          <div class="me-0 cart-img">
+            <img class="h-100 me-0" src="./assets/images/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" alt="...">
+          </div>
+          <div class="col col-lg-5">
+            <div class="card-body ps-4 py-0 d-flex flex-column h-100">
+              <h3 class="card-title fw-bold fs-1 mb-1">2020 台味設計展</h3>
+              <p class="card-text fw-bold fs-1 mb-1">01 JUN—31 OCT</p>
+              <p class="card-text fs-1 fw-light">全票</p>
+              <p class="cart-price fs-2 fw-bold mt-auto">NT$350</p>
+            </div>
+          </div>
+          <div class="col col-lg-3 flex-grow-0">
+            <div class="d-flex flex-column flex-md-row justify-content-center align-items-center h-100">
+              <a href="#" class="material-icons me-0 me-lg-3 text-dark">remove</a>
+              <p class="fs-2 fw-bold">01</p>
+              <a href="#" class="material-icons ms-0 ms-lg-3 text-dark">add</a>
             </div>
           </div>
         </div>
@@ -86,23 +111,23 @@
         <div class="close position-absolute js-delete">
           <span class="material-icons cursor-pointer">close</span>
         </div>
-        <div class="row g-0 pt-7 pb-6 px-8">
-          <div class="col me-0 cart-img">
-            <img class="h-100 me-0" src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="...">
+        <div class="row g-0 pt-8 pt-lg-7 pb-4 pb-lg-6 px-4 px-lg-8">
+          <div class="me-0 cart-img">
+            <img class="h-100 me-0" src="./assets/images/michel-catalisano--a0D9LpcKV8-unsplash.jpg" alt="...">
           </div>
-          <div class="col-5">
+          <div class="col col-lg-5">
             <div class="card-body ps-4 py-0 d-flex flex-column h-100">
               <h3 class="card-title fw-bold fs-1 mb-1">2020 台味設計展</h3>
-              <p class="card-text fw-bold fs-1 mb-1">01 JUN — 31 OCT</p>
+              <p class="card-text fw-bold fs-1 mb-1">01 JUN—31 OCT</p>
               <p class="card-text fs-1 fw-light">全票</p>
               <p class="cart-price fs-2 fw-bold mt-auto">NT$350</p>
             </div>
           </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center align-items-center h-100">
-              <a href="#" class="material-icons me-3 text-dark">remove</a>
+          <div class="col col-lg-3 flex-grow-0">
+            <div class="d-flex flex-column flex-md-row justify-content-center align-items-center h-100">
+              <a href="#" class="material-icons me-0 me-lg-3 text-dark">remove</a>
               <p class="fs-2 fw-bold">01</p>
-              <a href="#" class="material-icons ms-3 text-dark">add</a>
+              <a href="#" class="material-icons ms-0 ms-lg-3 text-dark">add</a>
             </div>
           </div>
         </div>
@@ -111,52 +136,34 @@
         <div class="close position-absolute js-delete">
           <span class="material-icons cursor-pointer">close</span>
         </div>
-        <div class="row g-0 pt-7 pb-6 px-8">
-          <div class="col me-0 cart-img">
+        <div class="row g-0 pt-8 pt-lg-7 pb-4 pb-lg-6 px-4 px-lg-8">
+          <div class="me-0 cart-img">
             <img class="h-100 me-0" src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="...">
           </div>
-          <div class="col-5">
+          <div class="col col-lg-5">
             <div class="card-body ps-4 py-0 d-flex flex-column h-100">
               <h3 class="card-title fw-bold fs-1 mb-1">2020 台味設計展</h3>
-              <p class="card-text fw-bold fs-1 mb-1">01 JUN — 31 OCT</p>
+              <p class="card-text fw-bold fs-1 mb-1">01 JUN—31 OCT</p>
               <p class="card-text fs-1 fw-light">全票</p>
               <p class="cart-price fs-2 fw-bold mt-auto">NT$350</p>
             </div>
           </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center align-items-center h-100">
-              <a href="#" class="material-icons me-3 text-dark">remove</a>
+          <div class="col col-lg-3 flex-grow-0">
+            <div class="d-flex flex-column flex-md-row justify-content-center align-items-center h-100">
+              <a href="#" class="material-icons me-0 me-lg-3 text-dark">remove</a>
               <p class="fs-2 fw-bold">01</p>
-              <a href="#" class="material-icons ms-3 text-dark">add</a>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="card mb-3">
-        <div class="close position-absolute js-delete">
-          <span class="material-icons cursor-pointer">close</span>
-        </div>
-        <div class="row g-0 pt-7 pb-6 px-8">
-          <div class="col me-0 cart-img">
-            <img class="h-100 me-0" src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="...">
-          </div>
-          <div class="col-5">
-            <div class="card-body ps-4 py-0 d-flex flex-column h-100">
-              <h3 class="card-title fw-bold fs-1 mb-1">2020 台味設計展</h3>
-              <p class="card-text fw-bold fs-1 mb-1">01 JUN — 31 OCT</p>
-              <p class="card-text fs-1 fw-light">全票</p>
-              <p class="cart-price fs-2 fw-bold mt-auto">NT$350</p>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center align-items-center h-100">
-              <a href="#" class="material-icons me-3 text-dark">remove</a>
-              <p class="fs-2 fw-bold">01</p>
-              <a href="#" class="material-icons ms-3 text-dark">add</a>
+              <a href="#" class="material-icons ms-0 ms-lg-3 text-dark">add</a>
             </div>
           </div>
         </div>
       </li>
     </ul>
+  </div>
+  <div class="offcanvas-footer d-flex justify-content-between align-items-center pt-5 ps-0 pe-2 pe-lg-4">
+    <div class="d-flex align-items-center text-white fs-2">
+      <span class="pe-6">小計</span>
+      <span>NT$2100</span>
+    </div>
+    <a href="./checkout-1.html" class="btn btn-lg btn-white text-primary fs-1">前往結帳</a>
   </div>
 </div>
