--- a/app/assets/components/modules/footer.ejs
+++ b/app/assets/components/modules/footer.ejs
@@ -1,5 +1,5 @@
 <!--footer-->
-<footer class=" <%= current === 'checkout' ? 'd-none' : 'true' -%>">
+<footer class=" <%= current === 'checkout' || current === 'checkoutEnd' ? 'd-none' : 'true' -%>">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center">
       <div class="d-flex align-items-md-center flex-column flex-md-row ">
