--- a/app/assets/components/modules/subscribe.ejs
+++ b/app/assets/components/modules/subscribe.ejs
@@ -1,12 +1,12 @@
 <!--subscribe 下方banner-->
-<section class="subscribe_bg bg-cover d-flex align-items-end  <%= current === 'checkout' ? 'd-none' : 'true' -%>">
+<section class="subscribe_bg bg-cover d-flex align-items-end  <%= current == 'checkout' || current =='checkoutEnd' ? 'd-none' : 'true' -%>">
   <div class="container">
     <div class="row mb-3">
       <h2 class="text-white fs-5 fw-bolder mb-3">想收到最新消息嗎？<br> 快訂閱我們！</h2>
       <div class="subscribe_mail input-group mb-3">
         <input type="text" class="form-control border border-0" placeholder="請輸入您的電子信箱"
-          aria-label="Recipient's username" aria-describedby="basic-addon2">
-         <a href="#" type="button" class="btn text-white btn-secondary rounded-end py-3 px-13">訂閱</a>
+               aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <a href="#" class="btn text-white btn-secondary rounded-end py-3 px-13">訂閱</a>
       </div>
     </div>
   </div>
