--- a/app/assets/style/pages/_checkout.scss
+++ b/app/assets/style/pages/_checkout.scss
@@ -3,8 +3,10 @@
 }
 
 .checkCart {
-  height: 550px;
   overflow-y: auto;
+  @include media-breakpoint-up(lg) {
+    height: 550px;
+  }
 
   &-img {
     width: 100%;
@@ -30,4 +32,3 @@
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: white;
 }
-
